issues are now stored in the fileApi; (also renamed all the dataregistry objects)